extends Control

var eos_manager: EOSManager

func _ready() -> void:
	eos_manager = get_node("/root/EOSManager")
	
	# Pod≈ÇƒÖcz przycisk ustawiania nicku
	var set_nick_button = $Panel/NicknamePanel/SetNicknameButton
	set_nick_button.pressed.connect(_on_set_nickname_pressed)
	
	# Utw√≥rz lobby po wej≈õciu na scenƒô (z retry je≈õli EOS siƒô jeszcze nie zalogowa≈Ç)
	create_lobby_with_retry()

func _on_set_nickname_pressed() -> void:
	var nickname_edit = $Panel/NicknamePanel/NicknameEdit
	var nickname = nickname_edit.text.strip_edges()
	if nickname != "":
		eos_manager.SetPendingNickname(nickname)
		print("‚úÖ Nickname set: ", nickname)
	else:
		print("‚ö†Ô∏è Nickname is empty")

func _on_back_button_pressed() -> void:
	print("Returning to main menu...")
	# Opu≈õƒá lobby je≈õli jeste≈õ w jakim≈õ
	if eos_manager != null and eos_manager.currentLobbyId != "":
		print("üö™ Leaving lobby before returning to menu...")
		eos_manager.LeaveLobby()
	get_tree().change_scene_to_file("res://Scenes/MainMenu/main.tscn")


func _on_leave_lobby_pressed() -> void:
	print("Returning to main menu...")
	# Opu≈õƒá lobby je≈õli jeste≈õ w jakim≈õ
	if eos_manager != null and eos_manager.currentLobbyId != "":
		print("üö™ Leaving lobby before returning to menu...")
		eos_manager.LeaveLobby()
	get_tree().change_scene_to_file("res://Scenes/MainMenu/main.tscn")


func create_lobby_with_retry(attempt: int = 0) -> void:
	# Sprawd≈∫ czy u≈ºytkownik jest ju≈º zalogowany
	if eos_manager == null:
		print("‚ö†Ô∏è EOSManager not found, retrying in 0.5s...")
		await get_tree().create_timer(0.5).timeout
		create_lobby_with_retry(attempt + 1)
		return
	
	# Sprawd≈∫ czy ju≈º nie ma lobby (np. powr√≥t z innej sceny)
	if eos_manager.currentLobbyId != null and eos_manager.currentLobbyId != "":
		print("‚úÖ Already in lobby: ", eos_manager.currentLobbyId)
		return
	
	# Sprawd≈∫ czy EOS jest zalogowany
	if not eos_manager.IsLoggedIn():
		if attempt < 10:
			print("‚è≥ Waiting for EOS login... (attempt %d/10)" % (attempt + 1))
			await get_tree().create_timer(0.5).timeout
			create_lobby_with_retry(attempt + 1)
		else:
			print("‚ùå EOS login timeout - could not create lobby")
		return
	
	# Teraz mo≈ºemy bezpiecznie utworzyƒá lobby
	print("‚úÖ EOS logged in, creating lobby...")
	eos_manager.CreateLobby("MyLobby", 4, true)
